--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     
     <div class="container">
         <div class="element1">
-            <img src="images/image-product-desktop.jpg" alt="parfum Gautier by CHANEL" class="desktop_image">
-            <img src="/assets/images/image-product-mobile.jpg" alt="parfum Gautier by CHANEL" class="mobile_image">
+            <img src="image-product-desktop.jpg" alt="parfum Gautier by CHANEL" class="desktop_image">
+            <img src="image-product-mobile.jpg" alt="parfum Gautier by CHANEL" class="mobile_image">
         </div>
         <div class="element2">
             <div class="perfume">
